--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,5 +26,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      - name: Publish package
+      - name: Build with maven
         run: mvn install
