--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.blackforestsolutions</groupId>
     <artifactId>dravelopsgeneratedcontent</artifactId>
-    <version>3.2.3</version>
+    <version>3.2.4</version>
 
     <properties>
         <!-- Maven Dependencies -->
@@ -57,30 +57,35 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+            <!--Generate XML Sources-->
+            <!--
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <extension>true</extension>
+                    <clearOutputDir>false</clearOutputDir>
+                    <locale>en</locale>
+                    <noGeneratedHeaderComments>true</noGeneratedHeaderComments>
+                    <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
+                    <packageName>de.blackforestsolutions.dravelopsgeneratedcontent.test</packageName>
+                    <sources>
+                        <source>${project.basedir}/src/main/resources/xsd/test.xsd</source>
+                    </sources>
+                    <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
+                </configuration>
+            </plugin>
+            -->
         </plugins>
-        <!--Generate XML Sources-->
-        <!--
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jaxb2-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <phase>generate-sources</phase>
-                    <goals>
-                        <goal>xjc</goal>
-                    </goals>
-                    <configuration>
-                        <extension>true</extension>
-                        <clearOutputDir>false</clearOutputDir>
-                        <sources>
-                            <source>${basedir}/src/main/resources/xsd/rest-1.23.xsd</source>
-                        </sources>
-                        <outputDirectory>${basedir}/src/main/java/de/blackforestsolutions/crawler/model/rmv</outputDirectory>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-        -->
     </build>
 
     <distributionManagement>
